objects/AsiaCustomerInformations__c.object
<CustomObject>
    <fields>
        <fullName>ABCMWeaponRelated__c</fullName>
        <label>Possibility of A.B.C.M. Weapons</label>
        <picklist>
            <picklistValues>
                <fullName>a. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>c. ?</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AsiaProfitCalculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profit Calculation</label>
        <referenceTo>AsiaProfitCalculation__c</referenceTo>
        <relationshipLabel>Customer Informations</relationshipLabel>
        <relationshipName>CustomerInformations_ProfitCalculation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssuranceStatementAvailable__c</fullName>
        <label>Availability of Statement of Assurance</label>
        <picklist>
            <picklistValues>
                <fullName>a. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. ?</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CapitalOrExecSomeCountryLabel__c</fullName>
        <label>①Iran, ②Iraq, ③North Korea:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CapitalOrExecSomeCountry__c</fullName>
        <label>Capital &amp;/or Executives from</label>
        <picklist>
            <picklistValues>
                <fullName>a. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>c. ?</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <label>Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConventionalWeaponRelated__c</fullName>
        <label>Possibility of Conventional Weapons</label>
        <picklist>
            <picklistValues>
                <fullName>a. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>c. ?</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerActivityScope__c</fullName>
        <label>Scope of Customer&apos;s Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerDeniedPerson__c</fullName>
        <label>Customer is listed in the Denied Persons</label>
        <picklist>
            <picklistValues>
                <fullName>a. Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>b. No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerFieldOtherLabel__c</fullName>
        <label>Field of Customer Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerField__c</fullName>
        <label>Field of Customer</label>
        <picklist>
            <picklistValues>
                <fullName>a. Military/Defense</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>b. Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Atomic Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d. Semiconductor (IC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. Physics/Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>f. Chemistry/Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g. Biology/Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>h. Manufacturing of deuterium oxide(heavy water)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>i. Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <label>Customer&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPastTransactionInstrument__c</fullName>
        <label>Instrument :</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPastTransaction__c</fullName>
        <label>Past Transaction with Customer:</label>
        <picklist>
            <picklistValues>
                <fullName>a. None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>b. Few</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Many</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerProcMainUser__c</fullName>
        <label>Principal User of Customer&apos;s Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerStatus__c</fullName>
        <label>Customer&apos;s Status</label>
        <picklist>
            <picklistValues>
                <fullName>a. Public</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>b. Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Military/Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d. Organization related to [ c ].</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. Organization similar to [ c &amp; d ].</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateResponsibleUser2__c</fullName>
        <label>DateResponsibleUser2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateResponsibleUser__c</fullName>
        <label>DateResponsibleUser</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndUseCertificateAvailable__c</fullName>
        <label>Availability of End-use Certificate</label>
        <picklist>
            <picklistValues>
                <fullName>a. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>c. ?</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndUseInspectionPossibility__c</fullName>
        <label>Possibility of End-use Inspection</label>
        <picklist>
            <picklistValues>
                <fullName>a. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. ?</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndUserInfo_c__c</fullName>
        <label>EndUserInfo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndUserInstallInfo__c</fullName>
        <label>EndUserInstallInfo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndUserOrderNo_c__c</fullName>
        <label>End User Order No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityTypeOtherLabel__c</fullName>
        <label>Type of Facility Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityType__c</fullName>
        <label>Type of Facility</label>
        <picklist>
            <picklistValues>
                <fullName>a. University/College/School</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>b. Laboratory/Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d. Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. Police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>f. Intelligence agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g. Public Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>h. Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InstrumentEndUseDescription__c</fullName>
        <label>Specific and Detailed End-use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instrument__c</fullName>
        <label>Instrument</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsResearchEntrustedMilitarySubject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsResearchEntrustedMilitary__c</fullName>
        <label>Researches Entrusted by the Military</label>
        <picklist>
            <picklistValues>
                <fullName>a. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>c. ?</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nation__c</fullName>
        <label>Nation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderNo__c</fullName>
        <label>Order No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <label>Organization (Company)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponsibleUser2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ResponsibleUser2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Informations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResponsibleUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ResponsibleUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RiskAnormalPractice__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Order does not correspond to normal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RiskCustomerKnowledgeSmall__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Customer&apos;s knowledge of ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RiskCustomerReluctantInfo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Customer is reluctant to provide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RiskCustomerSmall__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Customer is small and not known well.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RiskIllegalExporter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Customer is known or suspested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RiskInappropriateSP__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Customer orders inapproppriate service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RiskInstrumentIncompatible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Instrument is incompatible with customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RiskNoWishUsualService__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Customer does not wish to ask for usual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RiskPOBox__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Customer uses P.O Box without fixing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RiskUnusualPayment__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Customer requests unusual payment term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Customer Informations</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>Customer Informations</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>